--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <section>
                 <h1>Sản Phẩm Mới</h1>
                 <h2>Sữa chua tốt cho sức khỏe</h2>
-                <img src="./images/trangchu/yogurt.jpg">
+                <img src="images/trangchu/yogurt.jpg">
                 <br>
                 <p>Sữa chua là một loại thực phẩm được tạo ra từ quá trình lên men sữa của các vi khuẩn. Hầu hết các loại sữa đều có thể dùng làm sữa chua, tuy nhiên sữa bò là được dùng nhiều hơn hết. Sữa chua hay được gọi là yaourt (là da-ua). Chúng được lên men từ sữa động vật nhờ vi khuẩn lactic, đã được khử chất béo và thanh trùng ở nhiệt độ 80 - 90 độ C.Sữa chua có 2 loại cơ bản là sữa chua có đường và sữa chua không đường. Bên cạnh đó còn có loại sữa chua uống, sữa chua men sống. Váng sữa thường được chia làm 3 loại dựa vào hàm lượng chất béo có trong sản phẩm: váng sữa có hàm lượng chất béo cao nhất (35-50% chất béo), váng sữa thông thường (10-30% chất béo), váng sữa nguyên kem (6-15% chất béo). <a href="">(xem chi tiết)</a></p>
                 <h1>Góc Thành Viên</h1>
